--- a/index.html
+++ b/index.html
@@ -1,12 +1,111 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI T-Shirt Designer</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f5f5;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    header {
+      background-color: #111;
+      color: white;
+      width: 100%;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+
+    main {
+      margin-top: 2rem;
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      width: 90%;
+      max-width: 500px;
+    }
+
+    label, select, input[type="file"], button {
+      display: block;
+      width: 100%;
+      margin: 1rem 0;
+      font-size: 1rem;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      padding: 0.75rem;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
+    .preview {
+      margin-top: 1rem;
+    }
+
+    .preview img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to AI T-Shirt Designer</h1>
-  <p>Upload your artwork and get 3 AI-generated t-shirt mockups!</p>
+
+  <header>
+    <h1>AI T-Shirt Designer</h1>
+    <p>Upload your artwork and get 3 AI-generated T-shirt designs</p>
+  </header>
+
+  <main>
+    <form id="uploadForm">
+      <label for="imageUpload">Upload Your Artwork:</label>
+      <input type="file" id="imageUpload" accept="image/*" required />
+
+      <label for="styleSelect">Choose Design Style:</label>
+      <select id="styleSelect">
+        <option value="modern">Modern</option>
+        <option value="minimalist">Minimalist</option>
+        <option value="grunge">Grunge</option>
+        <option value="vintage">Vintage</option>
+      </select>
+
+      <button type="submit">Generate Designs</button>
+    </form>
+
+    <div class="preview" id="preview"></div>
+  </main>
+
+  <script>
+    const form = document.getElementById("uploadForm");
+    const preview = document.getElementById("preview");
+
+    form.addEventListener("submit", function (e) {
+      e.preventDefault();
+
+      const file = document.getElementById("imageUpload").files[0];
+      if (!file) return;
+
+      // TEMPORARY MOCK PREVIEW
+      preview.innerHTML = `<p>Designs will be shown here...</p>
+        <img src="https://via.placeholder.com/400x400?text=Mockup+1" />
+        <img src="https://via.placeholder.com/400x400?text=Mockup+2" />
+        <img src="https://via.placeholder.com/400x400?text=Mockup+3" />`;
+    });
+  </script>
 </body>
 </html>
