--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>AI T-Shirt Designer</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
+      font-family: 'Inter', sans-serif;
+      background: #f0f2f5;
       margin: 0;
       padding: 0;
       display: flex;
@@ -17,37 +18,56 @@
     }
 
     header {
-      background-color: #111;
+      background-color: #1f1f1f;
       color: white;
       width: 100%;
       text-align: center;
       padding: 2rem 1rem;
     }
 
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+
+    header p {
+      margin: 0.5rem 0 0;
+      font-size: 1rem;
+      opacity: 0.8;
+    }
+
     main {
       margin-top: 2rem;
       background: white;
       padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
       width: 90%;
-      max-width: 500px;
+      max-width: 480px;
     }
 
-    label, select, input[type="file"], button {
+    label {
+      font-weight: 600;
+      margin-top: 1rem;
       display: block;
+    }
+
+    select, input[type="file"], button {
       width: 100%;
-      margin: 1rem 0;
+      margin-top: 0.5rem;
       font-size: 1rem;
+      padding: 0.75rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
     }
 
     button {
       background-color: #007bff;
       color: white;
       border: none;
-      padding: 0.75rem;
-      border-radius: 5px;
+      margin-top: 1.5rem;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
 
     button:hover {
@@ -55,12 +75,15 @@
     }
 
     .preview {
-      margin-top: 1rem;
+      margin-top: 2rem;
+      text-align: center;
     }
 
     .preview img {
       max-width: 100%;
       height: auto;
+      border-radius: 8px;
+      margin: 0.5rem 0;
     }
   </style>
 </head>
@@ -68,15 +91,15 @@
 
   <header>
     <h1>AI T-Shirt Designer</h1>
-    <p>Upload your artwork and get 3 AI-generated T-shirt designs</p>
+    <p>Upload your artwork to get 3 T-shirt mockups!</p>
   </header>
 
   <main>
     <form id="uploadForm">
-      <label for="imageUpload">Upload Your Artwork:</label>
+      <label for="imageUpload">Upload Your Artwork</label>
       <input type="file" id="imageUpload" accept="image/*" required />
 
-      <label for="styleSelect">Choose Design Style:</label>
+      <label for="styleSelect">Choose a Design Style</label>
       <select id="styleSelect">
         <option value="modern">Modern</option>
         <option value="minimalist">Minimalist</option>
@@ -100,11 +123,12 @@
       const file = document.getElementById("imageUpload").files[0];
       if (!file) return;
 
-      // TEMPORARY MOCK PREVIEW
-      preview.innerHTML = `<p>Designs will be shown here...</p>
+      preview.innerHTML = `
+        <p>Here are your AI-generated mockups (example only):</p>
         <img src="https://via.placeholder.com/400x400?text=Mockup+1" />
         <img src="https://via.placeholder.com/400x400?text=Mockup+2" />
-        <img src="https://via.placeholder.com/400x400?text=Mockup+3" />`;
+        <img src="https://via.placeholder.com/400x400?text=Mockup+3" />
+      `;
     });
   </script>
 </body>
