--- a/index.html
+++ b/index.html
@@ -9,20 +9,18 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background: #f0f2f5;
       margin: 0;
       padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      background: url('sunrise_background.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: #333;
     }
 
     header {
-      background-color: #1f1f1f;
-      color: white;
-      width: 100%;
       text-align: center;
       padding: 2rem 1rem;
+      background-color: rgba(255, 255, 255, 0.6);
+      border-bottom: 2px solid rgba(0, 0, 0, 0.1);
     }
 
     header h1 {
@@ -37,11 +35,11 @@
     }
 
     main {
-      margin-top: 2rem;
-      background: white;
+      margin: 2rem auto;
+      background: rgba(255, 255, 255, 0.85);
       padding: 2rem;
       border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 20px rgba(0,0,0,0.2);
       width: 90%;
       max-width: 480px;
     }
@@ -62,7 +60,7 @@
     }
 
     button {
-      background-color: #007bff;
+      background-color: #ff6f00;
       color: white;
       border: none;
       margin-top: 1.5rem;
@@ -71,7 +69,7 @@
     }
 
     button:hover {
-      background-color: #0056b3;
+      background-color: #e65100;
     }
 
     .preview {
@@ -85,13 +83,22 @@
       border-radius: 8px;
       margin: 0.5rem 0;
     }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 1.5rem;
+      }
+      main {
+        padding: 1.5rem;
+      }
+    }
   </style>
 </head>
 <body>
 
   <header>
     <h1>AI T-Shirt Designer</h1>
-    <p>Upload your artwork to get 3 T-shirt mockups!</p>
+    <p>Upload your artwork and preview 3 fun mockups</p>
   </header>
 
   <main>
