--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="mockup-preview">
       <h2>Your T-Shirt Mockups</h2>
       <div class="mockup-grid" id="mockupGrid">
-        <!-- Images will be injected here -->
+        <!-- AI-generated images will be shown here -->
       </div>
     </section>
   </main>
@@ -40,36 +40,52 @@
     const mockupGrid = document.getElementById("mockupGrid");
     const loading = document.getElementById("loading");
 
-    const placeholderImages = [
-      "mockup_placeholder1.png",
-      "mockup_placeholder2.png",
-      "mockup_placeholder3.png"
-    ];
+    const API_URL = "https://dp-design-seven.vercel.app/api/generate";
 
-    form.addEventListener("submit", function(e) {
+    form.addEventListener("submit", async function(e) {
       e.preventDefault();
 
       const file = document.getElementById("imageInput").files[0];
-      if (!file) return alert("Please select an image first.");
+      if (!file) return alert("Please select an image.");
 
-      // Show loading
       loading.style.display = "block";
       mockupGrid.innerHTML = "";
 
-      // Simulate 4 second "AI" generation delay
-      setTimeout(() => {
-        loading.style.display = "none";
+      const reader = new FileReader();
+      reader.onloadend = async () => {
+        const base64Image = reader.result;
 
-        placeholderImages.forEach((src, index) => {
-          const div = document.createElement("div");
-          div.className = "mockup-card";
-          div.innerHTML = \`
-            <img src="\${src}" alt="Mockup \${index + 1}" />
-            <p>Design \${index + 1}</p>
-          \`;
-          mockupGrid.appendChild(div);
-        });
-      }, 4000);
+        try {
+          const response = await fetch(API_URL, {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ image: base64Image })
+          });
+
+          const data = await response.json();
+
+          if (data.results && Array.isArray(data.results)) {
+            data.results.forEach((url, index) => {
+              const div = document.createElement("div");
+              div.className = "mockup-card";
+              div.innerHTML = \`
+                <img src="\${url}" alt="Design \${index + 1}" />
+                <p>Design \${index + 1}</p>
+              \`;
+              mockupGrid.appendChild(div);
+            });
+          } else {
+            mockupGrid.innerHTML = "<p>Something went wrong. Try again later.</p>";
+          }
+        } catch (err) {
+          console.error(err);
+          mockupGrid.innerHTML = "<p>Failed to connect to the AI server.</p>";
+        } finally {
+          loading.style.display = "none";
+        }
+      };
+
+      reader.readAsDataURL(file);
     });
   </script>
 </body>
