--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
               const img = document.createElement("img");
               img.src = url;
-              img.alt = `Design ${index + 1}`;
+              img.alt = "Design " + (index + 1);
 
               const caption = document.createElement("p");
-              caption.textContent = `Design ${index + 1}`;
+              caption.textContent = "Design " + (index + 1);
 
               div.appendChild(img);
               div.appendChild(caption);
