--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         const prompt = "design a trendy t-shirt illustration based on the uploaded image";
 
         try {
-          const response = await fetch("https://dp-ai-cors.vercel.app/api/generate", {
+          const response = await fetch("https://dp-ai-server.onrender.com/api/generate", {
             method: "POST",
             headers: {
               "Content-Type": "application/json"
