--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         const prompt = "design a trendy t-shirt illustration based on the uploaded image";
 
         try {
-          const response = await fetch("https://api.dpdesign.ai/api/generate", {
+          const response = await fetch("https://dpai.fly.dev/api/generate", {
             method: "POST",
             headers: {
               "Content-Type": "application/json"
