--- a/index.html
+++ b/index.html
@@ -3,92 +3,98 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DP Design - AI T-Shirt Generator</title>
+  <title>DP Design – AI T-Shirt Generator</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: url('background.png') no-repeat center center fixed;
-      background-size: cover;
-      margin: 0;
-      padding: 0;
       text-align: center;
+      background-image: url('background.png');
+      background-size: cover;
+      background-position: center;
       color: white;
+      padding: 2em;
     }
     h1 {
-      margin-top: 2rem;
+      font-size: 3em;
       font-style: italic;
       font-weight: bold;
-      font-size: 2.5rem;
+      margin-bottom: 0.2em;
     }
-    #upload-section {
-      margin-top: 2rem;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 1rem;
-      border-radius: 1rem;
-      display: inline-block;
+    h2 {
+      font-size: 1.5em;
+      margin-top: 0;
+      font-style: italic;
+      font-weight: bold;
     }
-    input[type="file"] {
-      margin: 1rem 0;
+    input, button {
+      margin: 1em;
+      padding: 1em;
+      font-size: 1em;
     }
-    .preview {
-      margin: 1rem;
-      width: 300px;
-      border-radius: 1rem;
+    .designs {
+      margin-top: 2em;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1em;
+    }
+    .designs img {
+      max-width: 300px;
+      border: 2px solid white;
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
-  <h1>DP<br/>Design</h1>
-  <div id="upload-section">
-    <p>Select an image to generate T-shirt designs:</p>
-    <input type="file" id="image-upload" accept="image/*" />
-  </div>
-  <div id="output"></div>
+  <h1>DP</h1>
+  <h2>Design</h2>
+
+  <input type="file" id="imageInput" accept="image/*" />
+  <button onclick="generateDesigns()">Generate Designs</button>
+
+  <div class="designs" id="designsContainer"></div>
 
   <script>
-    document.getElementById("image-upload").addEventListener("change", function () {
+    async function generateDesigns() {
+      const input = document.getElementById('imageInput');
+      const file = input.files[0];
+
+      if (!file) {
+        alert('Please upload an image first!');
+        return;
+      }
+
       const reader = new FileReader();
-      reader.onloadend = async function () {
-        const base64Image = reader.result;
 
-        const prompt = "design a trendy t-shirt illustration based on the uploaded image";
-
+      reader.onloadend = async () => {
         try {
-          const response = await fetch("https://api.dpdesign.ai/api/generate", {
+          const response = await fetch("https://dp-design-server.fly.dev/api/generate", {
             method: "POST",
             headers: {
-              "Content-Type": "application/json"
+              "Content-Type": "application/json",
             },
-            body: JSON.stringify({
-              image: base64Image,
-              stylePrompt: prompt
-            })
+            body: JSON.stringify({ image: reader.result }),
           });
 
+          if (!response.ok) throw new Error("Failed to generate images.");
+
           const data = await response.json();
+          const container = document.getElementById('designsContainer');
+          container.innerHTML = "";
 
-          const output = document.getElementById("output");
-          output.innerHTML = ""; // Clear previous results
-
-          if (data.results && data.results.length > 0) {
-            data.results.forEach((url) => {
-              const img = document.createElement("img");
-              img.src = url;
-              img.alt = "Generated Design";
-              img.className = "preview";
-              output.appendChild(img);
-            });
-          } else {
-            output.innerHTML = "<p>No results generated. Try again.</p>";
-          }
-        } catch (error) {
-          console.error("Error generating designs:", error);
-          document.getElementById("output").innerHTML = "<p>Failed to generate designs.</p>";
+          data.images.forEach((url) => {
+            const img = document.createElement('img');
+            img.src = url;
+            container.appendChild(img);
+          });
+        } catch (err) {
+          console.error("Error generating designs:", err);
+          alert("Failed to generate T-shirt designs. Please try again.");
         }
       };
 
-      reader.readAsDataURL(this.files[0]);
-    });
+      reader.readAsDataURL(file);
+    }
   </script>
 </body>
 </html>
