--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DP Design – AI T‑Shirt Generator</title>
-  <meta name="description" content="Generate up to 3 AI t‑shirt mockups from your prompt." />
+  <title>DP Design – AI T‑Shirt Mockup Generator</title>
+  <meta name="description" content="Upload your artwork or enter a prompt; generate up to 3 AI t‑shirt mockups." />
   <style>
     :root{
       --bg1:#0e2a47; --bg2:#214d7c; --sun:#ffcc66; --accent:#ffd38d; --ink:#0b1622; --card:#11263f; --muted:#9fb3c8;
@@ -20,14 +20,14 @@
     header .sun{position:absolute; width:520px; height:520px; background:radial-gradient(circle at 50% 50%,var(--sun),rgba(255,204,102,.0) 70%);
       top:-220px; left:50%; transform:translateX(-50%); filter:blur(1px); opacity:.6}
     header h1{position:relative; margin:0; font-size:clamp(28px,4vw,44px); letter-spacing:.3px}
-    header p{position:relative; margin:8px auto 0; max-width:720px; color:var(--muted)}
+    header p{position:relative; margin:8px auto 0; max-width:820px; color:var(--muted)}
     .animals{position:absolute; inset:auto 0 -6px 0; height:110px; pointer-events:none; opacity:.2;
       background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="110" viewBox="0 0 1200 110"><path fill="%23ffffff" fill-opacity="0.8" d="M0 80 C150 100 250 60 400 85 C550 110 650 70 800 90 C950 110 1050 80 1200 95 L1200 110 L0 110 Z"/></svg>') repeat-x center/cover}
-    .wrap{width:100%; max-width:1100px; margin:0 auto; padding:12px 16px 48px; flex:1;}
+    .wrap{width:100%; max-width:1200px; margin:0 auto; padding:12px 16px 48px; flex:1;}
     .card{background:rgba(17,38,63,.75); border:1px solid rgba(255,255,255,.06); box-shadow:0 12px 30px rgba(0,0,0,.35);
       border-radius:18px; padding:18px; backdrop-filter: blur(8px)}
     .grid{display:grid; gap:16px}
-    @media(min-width:900px){.grid{grid-template-columns:420px 1fr}}
+    @media(min-width:980px){.grid{grid-template-columns:500px 1fr}}
 
     label{display:block; font-weight:600; margin:10px 0 6px}
     input[type="text"], select, button{
@@ -41,7 +41,17 @@
     button:disabled{opacity:.6; cursor:not-allowed}
     .danger{background:#c62828;color:#fff}
 
-    .results{display:grid; grid-template-columns:repeat(auto-fit,minmax(180px,1fr)); gap:14px; margin-top:12px}
+    .uploader{
+      background:#0a1b2d; border:1px dashed rgba(255,255,255,.25); border-radius:14px; padding:14px; text-align:center;
+      display:flex; align-items:center; justify-content:center; gap:12px; min-height:120px;
+    }
+    .uploader.drag{background:#0c2642; border-color:#ffd38d}
+    .uploader input[type=file]{display:none}
+    .thumb{display:flex; align-items:center; gap:12px; margin-top:10px}
+    .thumb img{width:72px; height:72px; object-fit:cover; border-radius:10px; border:1px solid rgba(255,255,255,.15)}
+    .thumb .name{font-size:13px; color:#cfe2ff}
+
+    .results{display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:14px; margin-top:12px}
     .mock{position:relative; background:#061221; border-radius:14px; border:1px solid rgba(255,255,255,.08); overflow:hidden}
     .mock img{display:block; width:100%; height:auto}
     .mock .badge{position:absolute; top:8px; left:8px; background:rgba(0,0,0,.55); padding:4px 8px; border-radius:999px; font-size:12px}
@@ -60,8 +70,8 @@
 <body>
   <header>
     <div class="sun"></div>
-    <h1>DP Design — AI T‑Shirt Generator</h1>
-    <p>Create up to three t‑shirt mockups from your description. Paste your Vercel API URL below once your backend is live.</p>
+    <h1>DP Design — Upload & Generate T‑Shirt Mockups</h1>
+    <p>Upload an image/artwork <em>or</em> enter a prompt. The AI will generate up to three t‑shirt mockups. Paste your Vercel API URL below once your backend is live.</p>
     <div class="animals"></div>
   </header>
 
@@ -70,14 +80,32 @@
     <section class="card">
       <div class="pug"><div class="nose"></div></div>
       <div class="hr"></div>
+
       <label for="apiUrl">API URL</label>
       <input id="apiUrl" type="text" placeholder="https://YOUR-APP.vercel.app/api/generate" />
       <div class="hint">This is your secure backend endpoint. We never put API keys in the browser.</div>
 
-      <label for="prompt">Prompt</label>
-      <input id="prompt" type="text" placeholder="e.g. cute pug pocket t‑shirt design, pastel vector" />
+      <label for="prompt">Prompt (optional if you upload artwork)</label>
+      <input id="prompt" type="text" placeholder="e.g. retro surf vibe, pastel ink, pocket print" />
 
-      <div class="row">
+      <label>Upload image/artwork</label>
+      <div id="drop" class="uploader">
+        <div>
+          <strong>Drag & drop</strong> artwork here or
+          <label style="color:#ffd38d; text-decoration:underline; cursor:pointer">
+            browse<input id="file" type="file" accept="image/*">
+          </label>
+        </div>
+      </div>
+      <div id="thumb" class="thumb" style="display:none">
+        <img id="thumbImg" alt="preview" />
+        <div>
+          <div class="name" id="thumbName"></div>
+          <div class="small" id="thumbMeta"></div>
+        </div>
+      </div>
+
+      <div class="row" style="margin-top:12px">
         <div>
           <label for="size">Size</label>
           <select id="size">
@@ -99,11 +127,8 @@
       </div>
       <div class="hint">Size & fit are for your order flow. They don't affect the AI image yet (we can wire that later).</div>
 
-      <label for="imageUrl">(Optional) Reference Image URL</label>
-      <input id="imageUrl" type="text" placeholder="https://… (only for models that support image conditioning)" />
-
       <div class="row" style="margin-top:14px">
-        <button id="generateBtn">Generate Designs</button>
+        <button id="generateBtn">Generate Mockups</button>
         <button id="clearBtn" class="danger">Clear</button>
       </div>
       <div class="hint" id="status"></div>
@@ -126,21 +151,68 @@
     const $ = (sel) => document.querySelector(sel);
     const apiUrlInput = $('#apiUrl');
     const promptInput = $('#prompt');
-    const imageInput = $('#imageUrl');
+    const fileInput = $('#file');
+    const drop = $('#drop');
+    const thumb = $('#thumb');
+    const thumbImg = $('#thumbImg');
+    const thumbName = $('#thumbName');
+    const thumbMeta = $('#thumbMeta');
     const generateBtn = $('#generateBtn');
     const clearBtn = $('#clearBtn');
     const results = $('#results');
     const statusEl = $('#status');
 
+    let lastFile = null; // holds the selected File
+    let lastBase64 = '';
+
     // Persist API URL locally so you don't have to paste it every time
     apiUrlInput.value = localStorage.getItem('dp_api_url') || '';
     apiUrlInput.addEventListener('change', () => localStorage.setItem('dp_api_url', apiUrlInput.value.trim()));
 
+    // --- Upload UI (drag+drop & browse) ---
+    function setThumb(file, dataUrl){
+      thumb.style.display = 'flex';
+      thumbImg.src = dataUrl;
+      thumbName.textContent = file.name;
+      const kb = Math.round(file.size / 1024);
+      thumbMeta.textContent = `${file.type || 'image'} • ${kb} KB`;
+    }
+
+    function readFileToBase64(file){
+      return new Promise((resolve, reject) => {
+        const reader = new FileReader();
+        reader.onload = () => resolve(reader.result);
+        reader.onerror = reject;
+        reader.readAsDataURL(file);
+      });
+    }
+
+    async function handleFiles(files){
+      const file = files && files[0];
+      if (!file) return;
+      if (!file.type.startsWith('image/')) { alert('Please upload an image file.'); return; }
+      lastFile = file;
+      const dataUrl = await readFileToBase64(file);
+      lastBase64 = dataUrl; // e.g. data:image/png;base64,AAA...
+      setThumb(file, dataUrl);
+    }
+
+    fileInput.addEventListener('change', (e) => handleFiles(e.target.files));
+
+    ;['dragenter','dragover'].forEach(evt => drop.addEventListener(evt, (e)=>{e.preventDefault(); drop.classList.add('drag');}));
+    ;['dragleave','drop'].forEach(evt => drop.addEventListener(evt, (e)=>{e.preventDefault(); drop.classList.remove('drag');}));
+    drop.addEventListener('drop', (e)=>{ e.preventDefault(); handleFiles(e.dataTransfer.files); });
+
+    // --- Generate ---
     async function generate() {
       const API_URL = apiUrlInput.value.trim();
       if (!API_URL) { alert('Please paste your API URL first.'); apiUrlInput.focus(); return; }
       const prompt = promptInput.value.trim();
-      const imageUrl = imageInput.value.trim();
+
+      // We send either imageBase64 (preferred if user uploaded) or nothing.
+      const payload = { prompt };
+      if (lastBase64) payload['imageBase64'] = lastBase64; // backend should accept this
+
       results.innerHTML = '';
       setStatus('Submitting…');
       generateBtn.disabled = true; clearBtn.disabled = true;
@@ -148,7 +220,7 @@
         const res = await fetch(API_URL, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ prompt, imageUrl })
+          body: JSON.stringify(payload)
         });
         const data = await res.json();
         if (!res.ok) throw new Error(data?.error || 'Request failed');
@@ -160,6 +232,9 @@
         setStatus('Done!');
       } catch (err) {
         setStatus('Error: ' + (err?.message || err));
+        if ((err?.message||'').includes('image') && !lastBase64) {
+          setStatus('Error: This model likely needs an image. Try uploading artwork above.');
+        }
       } finally {
         generateBtn.disabled = false; clearBtn.disabled = false;
       }
@@ -168,13 +243,14 @@
     function clearAll(){
       results.innerHTML = '';
       promptInput.value = '';
-      imageInput.value = '';
+      lastFile = null; lastBase64='';
+      thumb.style.display = 'none'; thumbImg.removeAttribute('src'); thumbName.textContent=''; thumbMeta.textContent='';
       setStatus('');
     }
     function setStatus(msg){ statusEl.textContent = msg; }
 
-    generateBtn.addEventListener('click', generate);
-    clearBtn.addEventListener('click', clearAll);
+    $('#generateBtn').addEventListener('click', generate);
+    $('#clearBtn').addEventListener('click', clearAll);
 
     // year
     $('#year').textContent = new Date().getFullYear();
